@@ -16,222 +16,482 @@ import java.util.stream.Collectors;
 @Transactional
 public class PlanificationService {
 
-    @Autowired private EtudiantRepository    etudiantRepository;
-    @Autowired private ProfesseurRepository  professeurRepository;
-    @Autowired private SalleRepository       salleRepository;
-    @Autowired private SoutenanceRepository  soutenanceRepository;
-    @Autowired private ContrainteRepository  contrainteRepository;
+    @Autowired private EtudiantRepository       etudiantRepository;
+    @Autowired private ProfesseurRepository      professeurRepository;
+    @Autowired private SalleRepository           salleRepository;
+    @Autowired private SoutenanceRepository      soutenanceRepository;
+    @Autowired private ContrainteRepository      contrainteRepository;
     @Autowired private VersionPlanningRepository versionPlanningRepository;
 
-    // Paramètres configurables (idéalement lus depuis la feuille CONFIG de l'Excel)
-    private static final int DUREE_MIN       = 45; // Mis à jour selon ta config
-    private static final int DELAI_JURY_MIN  = 60; // Pause d'1h entre deux soutenances
-    private static final LocalTime DEBUT_JOURNEE = LocalTime.of(8, 30);
-    private static final LocalTime FIN_JOURNEE   = LocalTime.of(17, 30);
+    private static final int DUREE_SOUTENANCE = 45;
+    private static final int PAUSE_SALLE      = 15;
+    private static final int DELAI_PROF       = 60;
+    private static final int INTERVALLE       = DUREE_SOUTENANCE + PAUSE_SALLE; // 60 min
 
-    /**
-     * Génère le planning complet et l'associe à une nouvelle VersionPlanning.
-     */
+    private static final LocalTime DEBUT_MATIN = LocalTime.of(8,  30);
+    private static final LocalTime FIN_MATIN   = LocalTime.of(12, 30);
+    private static final LocalTime DEBUT_APRES = LocalTime.of(14, 0);
+    private static final LocalTime FIN_APRES   = LocalTime.of(18, 0);
+
+    private Map<Long, List<Soutenance>> cacheSoutenancesParJour;
+    private Map<Long, Long>             cacheChargeProf;
+    private Map<Long, List<Contrainte>> cacheContraintes;
+
+    // ══════════════════════════════════════════════════════════════════════
+    //  POINT D'ENTRÉE
+    // ══════════════════════════════════════════════════════════════════════
     public String genererPlanningComplet(List<LocalDate> joursDisponibles) {
-        
-        // 1. Créer une nouvelle version
-        VersionPlanning version = new VersionPlanning();
-        version.setDateGeneration(LocalDateTime.now());
-        version.setDescription("Planning généré automatiquement - " + LocalDateTime.now());
-        version = versionPlanningRepository.save(version);
-
-        // 2. Charger les données
-        List<Etudiant> etudiants = etudiantRepository.findAll();
-        List<Professeur> professeurs = professeurRepository.findAll();
-        List<Salle> salles = salleRepository.findAll();
 
         if (joursDisponibles == null || joursDisponibles.isEmpty()) {
-            // Si aucun jour n'est fourni, on prend les 3 prochains jours ouvrés par défaut
-            joursDisponibles = Arrays.asList(
+            joursDisponibles = List.of(
                 LocalDate.now().plusDays(1),
                 LocalDate.now().plusDays(2),
-                LocalDate.now().plusDays(3)
-            );
+                LocalDate.now().plusDays(3));
         }
+        if (joursDisponibles.size() > 3)
+            joursDisponibles = joursDisponibles.subList(0, 3);
+
+        VersionPlanning version = new VersionPlanning();
+        version.setDateGeneration(LocalDateTime.now());
+        version.setDescription("Génération – " + LocalDateTime.now());
+        version = versionPlanningRepository.save(version);
+
+        cacheSoutenancesParJour = new HashMap<>();
+        cacheChargeProf         = new HashMap<>();
+
+        cacheContraintes = contrainteRepository.findAll().stream()
+            .collect(Collectors.groupingBy(c -> c.getProfesseur().getId()));
+
+        List<Etudiant>   etudiants   = etudiantRepository.findAll();
+        List<Professeur> professeurs = professeurRepository.findAll();
+        List<Salle>      salles      = salleRepository.findAll();
 
         try {
-            List<Soutenance> nouveauPlanning = genererAlgorithme(etudiants, professeurs, salles, joursDisponibles, version);
-            return "Succès : " + nouveauPlanning.size() + " soutenances planifiées dans la Version ID: " + version.getId();
-        } catch (PlanificationException e) {
-            return "Erreur : " + e.getMessage();
+            return executer(etudiants, professeurs, salles, joursDisponibles, version);
+        } catch (IllegalStateException e) {
+            return "❌ " + e.getMessage();
+        } catch (Exception e) {
+            e.printStackTrace();
+            return "❌ Erreur inattendue : " + e.getMessage();
         }
     }
 
-    /**
-     * Cœur de l'algorithme (adapté de ton code original)
-     */
-    private List<Soutenance> genererAlgorithme(List<Etudiant> etudiants,
-                                               List<Professeur> professeurs,
-                                               List<Salle> salles,
-                                               List<LocalDate> jours,
-                                               VersionPlanning version) {
+    // ══════════════════════════════════════════════════════════════════════
+    private String executer(List<Etudiant> etudiants, List<Professeur> professeurs,
+                             List<Salle> salles, List<LocalDate> jours,
+                             VersionPlanning version) {
 
-        if (professeurs.size() < 3) throw new PlanificationException("Il faut au moins 3 professeurs.");
-        if (etudiants.isEmpty()) throw new PlanificationException("Aucun étudiant à planifier.");
-
-        // Tri : Les étudiants en Anglais passent en premier (contrainte plus forte)
-        List<Etudiant> etudiantsTries = etudiants.stream()
-                .sorted(Comparator.comparingInt(e -> e.getLangue() == Etudiant.Langue.EN ? 0 : 1))
-                .collect(Collectors.toList());
+        validerPrerequis(etudiants, professeurs, salles);
 
         List<LocalTime> creneaux = genererCreneaux();
-        List<Soutenance> planningFinal = new ArrayList<>();
 
-        for (Etudiant etudiant : etudiantsTries) {
-            boolean planifie = false;
+        afficherDiagnosticComplet(etudiants, creneaux, jours);
 
-            // Boucle sur les jours, heures, salles
-            outer:
-            for (LocalDate jour : jours) {
-                for (LocalTime heure : creneaux) {
-                    for (Salle salle : salles) {
+        System.out.printf("%n📅 %d jours × %d créneaux × %d salles = %d places pour %d étudiants%n",
+            jours.size(), creneaux.size(), salles.size(),
+            jours.size() * creneaux.size() * salles.size(), etudiants.size());
 
-                        if (!estSalleLibre(salle, jour, heure, planningFinal)) continue;
-                        
-                        Professeur encadrant = etudiant.getEncadrant();
-                        if (encadrant == null) continue; // Sécurité
-                        if (!estProfDisponible(encadrant, jour, heure, planningFinal)) continue;
+        List<Etudiant> melanges = melangerParFiliere(etudiants);
 
-                        // Sélection du Jury (Jury1, Jury2, Jury3)
-                        // Note: Ton algorithme original choisissait 2 jurys. Ici on en choisit 3 (ou 2 + encadrant)
-                        ListeJury jury = choisirJuryComplet(encadrant, professeurs, jour, heure, planningFinal, etudiant.getLangue() == Etudiant.Langue.EN);
-                        
-                        if (jury == null) continue;
+        int succes = 0, echecs = 0;
+        Map<String, List<String>> rapportEchecs = new LinkedHashMap<>();
 
-                        // Création de la soutenance
-                        Soutenance s = new Soutenance();
-                        s.setVersion(version);
-                        s.setEtudiant(etudiant);
-                        s.setEncadrant(encadrant);
-                        s.setJury1(jury.j1);
-                        s.setJury2(jury.j2);
-                        s.setJury3(jury.j3);
-                        s.setSalle(salle);
-                        s.setDate(jour);
-                        s.setHeure(heure);
-                        s.setDureeMn(DUREE_MIN);
+        for (Etudiant etudiant : melanges) {
+            ResultatPlacement res = placerEtudiant(
+                etudiant, professeurs, salles, jours, creneaux, version);
 
-                        soutenanceRepository.save(s);
-                        planningFinal.add(s);
-                        planifie = true;
-                        break outer;
-                    }
-                }
-            }
-
-            if (!planifie) {
-                throw new PlanificationException("Impossible de planifier l'étudiant : " + etudiant.getNom() + " " + etudiant.getPrenom());
+            if (res.planifie()) {
+                succes++;
+                ajouterAuCache(res.soutenance());
+            } else {
+                echecs++;
+                rapportEchecs
+                    .computeIfAbsent(res.raison(), k -> new ArrayList<>())
+                    .add(etudiant.getNom() + " " + etudiant.getPrenom()
+                         + " (" + etudiant.getFiliere() + ")");
             }
         }
 
-        return planningFinal;
+        if (!rapportEchecs.isEmpty()) {
+            System.out.println("\n⚠️  RAPPORT D'ÉCHECS :");
+            rapportEchecs.forEach((cause, noms) -> {
+                System.out.printf("  ❌ %s [%d cas]%n", cause, noms.size());
+                noms.forEach(n -> System.out.println("     • " + n));
+            });
+        }
+
+        String msg = String.format("✅ %d soutenances planifiées sur %d étudiants.", succes, etudiants.size());
+        if (echecs > 0) {
+            String premiereCause = rapportEchecs.keySet().iterator().next();
+            int nb = rapportEchecs.get(premiereCause).size();
+            msg += String.format(" ⚠️ %d non planifiés. Cause principale : %s (%d cas).",
+                echecs, premiereCause, nb);
+        }
+        return msg;
     }
 
-    // ===== LOGIQUE DE SÉLECTION DU JURY (Adaptée pour 3 membres) =====
+    // ══════════════════════════════════════════════════════════════════════
+    //  PLACEMENT D'UN ÉTUDIANT
+    // ══════════════════════════════════════════════════════════════════════
+    private ResultatPlacement placerEtudiant(Etudiant etudiant,
+                                              List<Professeur> professeurs,
+                                              List<Salle> salles,
+                                              List<LocalDate> jours,
+                                              List<LocalTime> creneaux,
+                                              VersionPlanning version) {
 
-    private ListeJury choisirJuryComplet(Professeur encadrant,
-                                         List<Professeur> tousProfs,
-                                         LocalDate jour,
-                                         LocalTime heure,
-                                         List<Soutenance> planningActuel,
-                                         boolean exigeAnglais) {
-        
-        // On cherche 3 profs disponibles (qui ne sont pas l'encadrant)
-        List<Professeur> candidats = tousProfs.stream()
-                .filter(p -> !p.getId().equals(encadrant.getId()))
-                .filter(p -> estProfDisponible(p, jour, heure, planningActuel))
-                .sorted(Comparator.comparingLong(p -> compterSoutenances(p, planningActuel))) // Équité
-                .collect(Collectors.toList());
+        Professeur encadrant = etudiant.getEncadrant();
+        if (encadrant == null)
+            return ResultatPlacement.echec("Aucun encadrant défini");
 
-        // On essaie de trouver 3 profs qui respectent la contrainte langue
-        for (int i = 0; i < candidats.size(); i++) {
-            for (int j = i + 1; j < candidats.size(); j++) {
-                for (int k = j + 1; k < candidats.size(); k++) {
-                    
-                    Professeur p1 = candidats.get(i);
-                    Professeur p2 = candidats.get(j);
-                    Professeur p3 = candidats.get(k);
+        boolean enAnglais = etudiant.getLangue() == Etudiant.Langue.EN;
+        String derniereRaison = "";
 
-                    // Vérification contrainte Anglais : Au moins un des 3 doit parler anglais
-                    if (exigeAnglais && !p1.isParleAnglais() && !p2.isParleAnglais() && !p3.isParleAnglais()) {
-                        continue;
-                    }
+        for (LocalDate jour : jours) {
+            for (LocalTime heure : creneaux) {
 
-                    return new ListeJury(p1, p2, p3);
+                // ✅ FIX 1 : On ne vérifie PAS la dispo via estProfDisponible pour l'encadrant
+                // car il est forcément présent pour son propre étudiant.
+                // On vérifie uniquement qu'il n'a pas DÉJÀ une autre soutenance au même créneau exact.
+                if (encadrantOccupeMemeCreneauExact(encadrant, jour, heure)) {
+                    derniereRaison = "Encadrant " + encadrant.getNom()
+                        + " déjà occupé au créneau exact " + heure;
+                    continue;
                 }
+
+                // Choisir le jury
+                ListeJury jury = choisirJury(encadrant, professeurs, jour, heure,
+                                              etudiant.getFiliere(), enAnglais);
+                if (jury == null) {
+                    derniereRaison = "Jury impossible (spécialité/langue/dispo) à " + heure;
+                    continue;
+                }
+
+                // Trouver une salle libre
+                Salle salleLibre = trouverSalleLibre(salles, jour, heure);
+                if (salleLibre == null) {
+                    derniereRaison = "Aucune salle disponible à " + heure + " le " + jour;
+                    continue;
+                }
+
+                // Créer et sauvegarder la soutenance
+                Soutenance s = new Soutenance();
+                s.setVersion(version);
+                s.setEtudiant(etudiant);
+                s.setEncadrant(encadrant);
+                s.setJury1(jury.j1());  // encadrant
+                s.setJury2(jury.j2());  // prof externe 1
+                s.setJury3(jury.j3());  // prof externe 2
+                s.setSalle(salleLibre);
+                s.setDate(jour);
+                s.setHeure(heure);
+                s.setDureeMn(DUREE_SOUTENANCE);
+
+                soutenanceRepository.save(s);
+                soutenanceRepository.flush();
+                return ResultatPlacement.succes(s);
             }
         }
+
+        return ResultatPlacement.echec(derniereRaison.isEmpty()
+            ? "Aucun créneau disponible sur " + jours.size() + " jours"
+            : derniereRaison);
+    }
+
+    // ══════════════════════════════════════════════════════════════════════
+    //  VÉRIFICATION ENCADRANT — CRÉNEAU EXACT SEULEMENT
+    // ══════════════════════════════════════════════════════════════════════
+    /**
+     * ✅ FIX 1 : Vérifie uniquement si l'encadrant a DÉJÀ une soutenance au même créneau exact.
+     * On n'applique PAS la contrainte 1h à l'encadrant pour ses propres étudiants
+     * car il est obligatoirement présent — on veut juste éviter le doublon simultané.
+     */
+    private boolean encadrantOccupeMemeCreneauExact(Professeur encadrant,
+                                                     LocalDate jour,
+                                                     LocalTime heure) {
+        for (Soutenance s : getCacheJour(jour)) {
+            if (!implique(s, encadrant)) continue;
+            if (s.getHeure().equals(heure)) return true;
+        }
+        return false;
+    }
+
+    // ══════════════════════════════════════════════════════════════════════
+    //  SÉLECTION DU JURY
+    // ══════════════════════════════════════════════════════════════════════
+    private ListeJury choisirJury(Professeur encadrant, List<Professeur> tousProfs,
+                                   LocalDate jour, LocalTime heure,
+                                   Etudiant.Filiere filiere, boolean exigeAnglais) {
+
+        List<Professeur> candidats = tousProfs.stream()
+            .filter(p -> !p.getId().equals(encadrant.getId()))
+            .filter(p -> exigeAnglais || !estProfAnglaisUniquement(p))
+            .filter(p -> estProfDisponible(p, jour, heure))
+            .sorted(Comparator.comparingLong(p -> chargeProf(p.getId())))
+            .collect(Collectors.toList());
+
+        // ✅ Mode normal : encadrant + 2 jurys = au moins 2 profs GI au total
+        for (int i = 0; i < candidats.size(); i++) {
+            for (int j = i + 1; j < candidats.size(); j++) {
+                Professeur c1 = candidats.get(i);
+                Professeur c2 = candidats.get(j);
+
+                if (nbProfsGI(encadrant, c1, c2) < 2) continue;
+                if (exigeAnglais && !anyAnglais(encadrant, c1, c2)) continue;
+
+                // ✅ jury1 = encadrant, jury2 = c1, jury3 = c2
+                return new ListeJury(encadrant, c1, c2);
+            }
+        }
+
+        // ⚠️ Mode dégradé : 1 seul GI
+        for (int i = 0; i < candidats.size(); i++) {
+            for (int j = i + 1; j < candidats.size(); j++) {
+                Professeur c1 = candidats.get(i);
+                Professeur c2 = candidats.get(j);
+
+                if (nbProfsGI(encadrant, c1, c2) < 1) continue;
+                if (exigeAnglais && !anyAnglais(encadrant, c1, c2)) continue;
+
+                System.out.printf("  ⚠️  Mode dégradé jury (1 GI) pour encadrant %s%n",
+                    encadrant.getNom());
+                return new ListeJury(encadrant, c1, c2);
+            }
+        }
+
+        // 🆘 Mode urgence
+        if (candidats.size() >= 2) {
+            Professeur c1 = candidats.get(0);
+            Professeur c2 = candidats.get(1);
+            if (!exigeAnglais || anyAnglais(encadrant, c1, c2)) {
+                System.out.printf("  🆘 Mode urgence jury pour encadrant %s%n",
+                    encadrant.getNom());
+                return new ListeJury(encadrant, c1, c2);
+            }
+        }
+
         return null;
     }
 
-    // ===== VÉRIFICATIONS (Similaires à ton code, adaptées) =====
+    // ══════════════════════════════════════════════════════════════════════
+    //  DISPONIBILITÉ PROF (jurys externes uniquement)
+    // ══════════════════════════════════════════════════════════════════════
+    public boolean estProfDisponible(Professeur prof, LocalDate jour, LocalTime heureDebut) {
+        LocalTime heureFin = heureDebut.plusMinutes(DUREE_SOUTENANCE);
 
-    public boolean estProfDisponible(Professeur prof, LocalDate jour, LocalTime heure, List<Soutenance> planningActuel) {
-        // 1. Vérifier les contraintes BDD
-        List<Contrainte> contraintes = contrainteRepository.findByProfesseur(prof);
-        LocalTime heureFin = heure.plusMinutes(DUREE_MIN);
-
-        for (Contrainte c : contraintes) {
-            if (c.getDateIndisponible().equals(jour)) {
-                if (c.getHeureDebut() != null && c.getHeureFin() != null) {
-                    if (heure.isBefore(c.getHeureFin()) && heureFin.isAfter(c.getHeureDebut())) return false;
-                } else {
-                    return false; // Toute la journée bloquée
-                }
-            }
+        for (Contrainte c : cacheContraintes.getOrDefault(prof.getId(), List.of())) {
+            if (!c.getDateIndisponible().equals(jour)) continue;
+            if (c.getHeureDebut() == null || c.getHeureFin() == null) return false;
+            if (heureDebut.isBefore(c.getHeureFin()) && heureFin.isAfter(c.getHeureDebut()))
+                return false;
         }
 
-        // 2. Vérifier les conflits dans le planning actuel (Délai 1h)
-        for (Soutenance s : planningActuel) {
-            if (!s.getDate().equals(jour)) continue;
-            
-            // Si le prof est impliqué dans cette soutenance
-            if (s.getEncadrant().getId().equals(prof.getId()) ||
-                (s.getJury1() != null && s.getJury1().getId().equals(prof.getId())) ||
-                (s.getJury2() != null && s.getJury2().getId().equals(prof.getId())) ||
-                (s.getJury3() != null && s.getJury3().getId().equals(prof.getId()))) {
-                
-                long diffMin = Math.abs(heure.toSecondOfDay() / 60L - s.getHeure().toSecondOfDay() / 60L);
-                if (diffMin < DELAI_JURY_MIN) return false;
-            }
+        for (Soutenance s : getCacheJour(jour)) {
+            if (!implique(s, prof)) continue;
+
+            LocalTime exDebut = s.getHeure();
+            LocalTime exFin   = exDebut.plusMinutes(DUREE_SOUTENANCE);
+
+            boolean nouvFinAvantEx = !heureFin.plusMinutes(DELAI_PROF).isAfter(exDebut);
+            boolean exFinAvantNouv = !exFin.plusMinutes(DELAI_PROF).isAfter(heureDebut);
+
+            if (!nouvFinAvantEx && !exFinAvantNouv) return false;
+        }
+
+        return true;
+    }
+
+    // ══════════════════════════════════════════════════════════════════════
+    //  DISPONIBILITÉ SALLE
+    // ══════════════════════════════════════════════════════════════════════
+    public boolean estSalleLibre(Salle salle, LocalDate jour, LocalTime heureDebut) {
+        LocalTime heureFin = heureDebut.plusMinutes(DUREE_SOUTENANCE);
+        for (Soutenance s : getCacheJour(jour)) {
+            if (!s.getSalle().getId().equals(salle.getId())) continue;
+            LocalTime exDebut = s.getHeure();
+            LocalTime exFin   = exDebut.plusMinutes(DUREE_SOUTENANCE);
+            boolean nouvFinAvantEx = !heureFin.plusMinutes(PAUSE_SALLE).isAfter(exDebut);
+            boolean exFinAvantNouv = !exFin.plusMinutes(PAUSE_SALLE).isAfter(heureDebut);
+            if (!nouvFinAvantEx && !exFinAvantNouv) return false;
         }
         return true;
     }
 
-    public boolean estSalleLibre(Salle salle, LocalDate jour, LocalTime heure, List<Soutenance> planningActuel) {
-        return planningActuel.stream().noneMatch(s ->
-                s.getSalle().getId().equals(salle.getId()) &&
-                s.getDate().equals(jour) &&
-                s.getHeure().equals(heure));
-    }
-
-    private List<LocalTime> genererCreneaux() {
-        List<LocalTime> creneaux = new ArrayList<>();
-        LocalTime t = DEBUT_JOURNEE;
-        while (!t.isAfter(FIN_JOURNEE.minusMinutes(DUREE_MIN))) {
-            creneaux.add(t);
-            t = t.plusMinutes(DUREE_MIN);
+    private Salle trouverSalleLibre(List<Salle> salles, LocalDate jour, LocalTime heure) {
+        for (Salle salle : salles) {
+            if (estSalleLibre(salle, jour, heure)) return salle;
         }
-        return creneaux;
+        return null;
     }
 
-    public long compterSoutenances(Professeur prof, List<Soutenance> planningActuel) {
-        return planningActuel.stream()
-                .filter(s -> s.getEncadrant().getId().equals(prof.getId()) ||
-                             (s.getJury1() != null && s.getJury1().getId().equals(prof.getId())) ||
-                             (s.getJury2() != null && s.getJury2().getId().equals(prof.getId())) ||
-                             (s.getJury3() != null && s.getJury3().getId().equals(prof.getId())))
-                .count();
+    // ══════════════════════════════════════════════════════════════════════
+    //  GÉNÉRATION DES CRÉNEAUX
+    // ══════════════════════════════════════════════════════════════════════
+    private List<LocalTime> genererCreneaux() {
+        List<LocalTime> cr = new ArrayList<>();
+        LocalTime t = DEBUT_MATIN;
+        while (!t.plusMinutes(DUREE_SOUTENANCE).isAfter(FIN_MATIN)) {
+            cr.add(t);
+            t = t.plusMinutes(INTERVALLE);
+        }
+        t = DEBUT_APRES;
+        while (!t.plusMinutes(DUREE_SOUTENANCE).isAfter(FIN_APRES)) {
+            cr.add(t);
+            t = t.plusMinutes(INTERVALLE);
+        }
+        System.out.println("⏰ Créneaux générés : " + cr.size() + " → " + cr);
+        return cr;
     }
 
-    // Types internes
+    // ══════════════════════════════════════════════════════════════════════
+    //  MÉLANGE INTER-FILIÈRES
+    // ══════════════════════════════════════════════════════════════════════
+    private List<Etudiant> melangerParFiliere(List<Etudiant> etudiants) {
+        Map<Etudiant.Filiere, List<Etudiant>> map = etudiants.stream()
+            .collect(Collectors.groupingBy(Etudiant::getFiliere));
+        map.values().forEach(Collections::shuffle);
+
+        List<Etudiant> res = new ArrayList<>();
+        List<List<Etudiant>> groupes = new ArrayList<>(map.values());
+        int max = groupes.stream().mapToInt(List::size).max().orElse(0);
+        for (int i = 0; i < max; i++)
+            for (List<Etudiant> g : groupes)
+                if (i < g.size()) res.add(g.get(i));
+
+        System.out.println("📊 Distribution filières :");
+        map.forEach((f, l) -> System.out.printf("   %-6s : %d%n", f, l.size()));
+        return res;
+    }
+
+    // ══════════════════════════════════════════════════════════════════════
+    //  DIAGNOSTIC
+    // ══════════════════════════════════════════════════════════════════════
+    private void afficherDiagnosticComplet(List<Etudiant> etudiants,
+                                            List<LocalTime> creneaux,
+                                            List<LocalDate> jours) {
+        int capaciteMax = creneaux.size() * jours.size();
+        System.out.println("══════════ DIAGNOSTIC PRÉ-GÉNÉRATION ══════════");
+        System.out.printf("  Capacité max par encadrant : %d créneaux × %d jours = %d%n",
+            creneaux.size(), jours.size(), capaciteMax);
+        System.out.println("  Répartition des étudiants par encadrant :");
+
+        etudiants.stream()
+            .filter(e -> e.getEncadrant() != null)
+            .collect(Collectors.groupingBy(Etudiant::getEncadrant, Collectors.counting()))
+            .entrySet().stream()
+            .sorted(Map.Entry.<Professeur, Long>comparingByValue().reversed())
+            .forEach(e -> {
+                String etat = e.getValue() > capaciteMax ? "🔴 SURCHARGÉ" : "✅";
+                System.out.printf("    %s %-25s : %d étudiant(s)%n",
+                    etat, e.getKey().getNom(), e.getValue());
+            });
+
+        long sansEncadrant = etudiants.stream()
+            .filter(e -> e.getEncadrant() == null).count();
+        if (sansEncadrant > 0)
+            System.out.printf("  🔴 %d étudiant(s) SANS encadrant défini%n", sansEncadrant);
+
+        System.out.println("═══════════════════════════════════════════════");
+    }
+
+    // ══════════════════════════════════════════════════════════════════════
+    //  VALIDATION
+    // ══════════════════════════════════════════════════════════════════════
+    private void validerPrerequis(List<Etudiant> etudiants,
+                                   List<Professeur> professeurs,
+                                   List<Salle> salles) {
+        if (etudiants.isEmpty())
+            throw new IllegalStateException("Aucun étudiant importé.");
+        if (professeurs.size() < 3)
+            throw new IllegalStateException("Il faut au moins 3 professeurs.");
+        if (salles.isEmpty())
+            throw new IllegalStateException("Aucune salle définie.");
+
+        long nbGI = professeurs.stream().filter(this::estProfGI).count();
+        if (nbGI < 2)
+            throw new IllegalStateException(
+                "Il faut au moins 2 profs de spécialité GI (actuellement " + nbGI + ").");
+    }
+
+    // ══════════════════════════════════════════════════════════════════════
+    //  UTILITAIRES
+    // ══════════════════════════════════════════════════════════════════════
+    private boolean estProfGI(Professeur p) {
+        if (p.getSpecialite() == null) return false;
+        String s = p.getSpecialite().trim().toUpperCase();
+        return s.equals("GI")
+            || s.contains("INFORMATIQUE")
+            || s.contains("GÉNIE INFO")
+            || s.contains("GENIE INFO");
+    }
+
+    private boolean estProfAnglaisUniquement(Professeur p) {
+        return p.isParleAnglais()
+            && p.getNom() != null
+            && p.getNom().equalsIgnoreCase("BOUAZZA");
+    }
+
+    private long nbProfsGI(Professeur e, Professeur c1, Professeur c2) {
+        return (estProfGI(e) ? 1 : 0)
+             + (estProfGI(c1) ? 1 : 0)
+             + (estProfGI(c2) ? 1 : 0);
+    }
+
+    private boolean anyAnglais(Professeur e, Professeur c1, Professeur c2) {
+        return e.isParleAnglais() || c1.isParleAnglais() || c2.isParleAnglais();
+    }
+
+    private boolean implique(Soutenance s, Professeur prof) {
+        Long pid = prof.getId();
+        return s.getEncadrant().getId().equals(pid)
+            || (s.getJury1() != null && s.getJury1().getId().equals(pid))
+            || (s.getJury2() != null && s.getJury2().getId().equals(pid))
+            || (s.getJury3() != null && s.getJury3().getId().equals(pid));
+    }
+
+    private List<Soutenance> getCacheJour(LocalDate jour) {
+        return cacheSoutenancesParJour.computeIfAbsent(
+            jour.toEpochDay(), k -> new ArrayList<>());
+    }
+
+    private void ajouterAuCache(Soutenance s) {
+        getCacheJour(s.getDate()).add(s);
+        // ✅ FIX 2 : On compte l'encadrant UNE SEULE FOIS
+        // jury1 = encadrant → on skip jury1 pour éviter le double comptage
+        incrementerCharge(s.getEncadrant().getId());
+        if (s.getJury2() != null) incrementerCharge(s.getJury2().getId());
+        if (s.getJury3() != null) incrementerCharge(s.getJury3().getId());
+    }
+
+    private long chargeProf(Long id) {
+        return cacheChargeProf.getOrDefault(id, 0L);
+    }
+
+    private void incrementerCharge(Long id) {
+        cacheChargeProf.merge(id, 1L, Long::sum);
+    }
+
+    public long compterSoutenances(Professeur prof, VersionPlanning version) {
+        return soutenanceRepository.findByVersion(version).stream()
+            .filter(s -> implique(s, prof)).count();
+    }
+
+    // ══════════════════════════════════════════════════════════════════════
+    //  TYPES INTERNES
+    // ══════════════════════════════════════════════════════════════════════
+
+    // ✅ FIX 3 : ListeJury passe de 2 à 3 membres (encadrant + 2 jurys externes)
     private record ListeJury(Professeur j1, Professeur j2, Professeur j3) {}
-    
+
+    private record ResultatPlacement(boolean planifie, Soutenance soutenance, String raison) {
+        static ResultatPlacement succes(Soutenance s) {
+            return new ResultatPlacement(true, s, "");
+        }
+        static ResultatPlacement echec(String r) {
+            return new ResultatPlacement(false, null, r);
+        }
+    }
+
     public static class PlanificationException extends RuntimeException {
         public PlanificationException(String message) { super(message); }
     }
